# PixelGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pixelgl.h
Projects/ConwayGameOfLife/: main.cpp
Projects/ParticleSim/: main.cpp
Projects/PhysicsTest/: main.cpp
Projects/Platformer/: AssetManager.cpp  AssetManager.h  CompileDefines.h  GameManager.cpp  GameManager.h  Interfaces.h  MapManager.cpp  MapManager.h  Player.cpp  Player.h  TileDefs.cpp  TileDefs.h  main.cpp
pixelGL/: engine.h  functions.h  image.h  macros.h  physics.h  pixel.h  pixelgl.h  vector2.h
